# ubongo-extreme-solver

./: index.html  style-dcd6ac5a367ecbfd.css  ubongo-extreme-solver-web-cf041d63113dd801.js  ubongo-extreme-solver-web-cf041d63113dd801_bg.wasm
.github/workflows/: pages.yml  rust.yml
crates/ubongo-extreme-solver/: Cargo.toml  README.md
crates/ubongo-extreme-solver-web/: Cargo.toml  Trunk.toml  index.html
crates/ubongo-extreme-solver-web/assets/: style.sass
crates/ubongo-extreme-solver-web/src/: main.rs  tests.rs
crates/ubongo-extreme-solver-web/src/bindings/: mod.rs  resize_end.rs
crates/ubongo-extreme-solver-web/src/components/: app.rs
crates/ubongo-extreme-solver-web/src/sycamore_ext/: mod.rs  on_resize_end.rs  task.rs
crates/ubongo-extreme-solver/benches/: test_files.rs
crates/ubongo-extreme-solver/data/: b18b.json  b18g.json  b18r.json  b18y.json  b38y.json  b4.json
crates/ubongo-extreme-solver/src/: axial.rs  cube.rs  lib.rs  tests.rs
snippets/ubongo-extreme-solver-web-dea669f0818ad122/src/bindings/: resize_end.js
