[package]
name = "ubongo-extreme-solver-web"
version = "1.6.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.23", features = ["wasmbind"] }
common_macros = "0.1.1"
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["color"] }
futures = "0.3.25"
glam = "0.27.0"
gloo = { version = "0.11.0", features = ["futures"] }
indexmap = "2.2.6"
json5 = "0.4.1"
log = { version = "0.4.17", features = ["release_max_level_info"] }
serde_json = "1.0.91"
sycamore = { version = "0.9.0-beta.2", features = ["suspense"] }
tracing = { version = "0.1.37", features = ["log-always", "release_max_level_info"] }
ubongo-extreme-solver = { version = "1.0.0", path = "../ubongo-extreme-solver" }
wasm-bindgen = "=0.2.92"
web-sys = { version = "0.3.69", features = ["Node"] }
