[package]
name = "ubongo-extreme-solver"
version = "1.0.0"
edition = "2021"

[dependencies]
bumpalo = "3.12.0"
indexmap = { version = "1.9.2", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }

[dev-dependencies]
criterion = "0.4.0"
expect-test = "1.4.0"
rand = "0.8.5"
serde_json = "1.0.91"

[[bench]]
name = "test_files"
harness = false
